fix comic sans font on mobile

--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
+@font-face {
+    font-family: "Comic Sans MS";
+    src: local("Comic Sans MS"), 
+         url("fonts/comic.ttf") format("truetype");
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "Comic Sans MS";
+    src: local("Comic Sans MS Bold"), 
+         url("fonts/comicbd.ttf") format("truetype");
+    font-weight: bold;
+    font-style: normal;
+}
+
 *, *::before, *::after {
     margin: 0;
     padding: 0;
